[package]
authors = ["Pollen Robotics <contact@pollen-robotics.com>"]
categories = [
    "hardware-support",
    "no-std",
]
description = "Rust API for the STM32F0 micro controller"
keywords = [
    "embedded",
    "STM32",
]
license = "Apache-2.0"
name = "stm32f0_hal"
repository = "https://github.com/pollen-robotics/stm32f0"
version = "0.1.0"

[badges.travis-ci]
repository = "pollen-robotics/stm32f0"

[dependencies]
cortex-m = "0.3.1"

[dev-dependencies]
cortex-m-semihosting = "0.2.0"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "=0.3.7"

[dependencies.stm32f0x2]
features = ["rt"]
path = "../stm32f0x2"

[features]
default = []
use_alloc = ["alloc-cortex-m"]

[dependencies.alloc-cortex-m]
git = "https://github.com/pollen-robotics/alloc-cortex-m"
optional = true
