[package]
authors = ["Pollen Robotics <luos@pollen-robotics.com>"]
categories = [
    "hardware-support",
    "no-std",
]
description = "Rust API for the STM32F0 micro controller"
keywords = [
    "embedded",
    "STM32",
]
license = "Apache-2.0"
name = "stm32f0_hal"
repository = "https://github.com/pollen-robotics/stm32f0"
version = "0.2.0"

[badges.travis-ci]
repository = "pollen-robotics/stm32f0"

[dependencies]
bare-metal = "0.1.1"
cortex-m = "0.4.3"
nb = "0.1.1"

[dependencies.alloc-cortex-m]
git = "https://github.com/pollen-robotics/alloc-cortex-m"
optional = true

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.1.0"

[dependencies.stm32f0x2]
path = "../stm32f0x2"

[dev-dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.12"

[dev-dependencies.stm32f0x2]
features = ["rt"]
path = "../stm32f0x2"

[dev-dependencies.cortex-m-semihosting]
version = "0.2.0"

[features]
default = []
use_alloc = ["alloc-cortex-m"]
